<resources>
    <string name="app_name">H.O.P.E</string>
    <string name="bienvenida">Bienvenido</string>
    <string name="explicacion">A continuación se te presentará un formulario que debes llenar para optar por el beneficio la alcadía de medellín para dar la solucion a la problematica del desempleo.</string>
    <string name="ingresoform">Ingresar al formulario.</string>
    <string name="GraciasParticipar">¡Gracias por participar!</string>
    <string name="DatosAnilizando">Tus datos estan siendo analizados, al terminar el proceso se te notificará vía telefonica que fue seleccionado para obtener el beneficio, en caso contrario se te notificará vía correo que no pasó el proceso de selección.</string>
    <string name="Difundir">Por último, ayudanos a difundir la misión de H.O.P.E compartiendo esta aplicación con tus amigos y conocidos para juntos ayudar a frenar la tasa de desempleo que actualmente esta azotando al mundo.</string>
    <string name="videoAutocuidado">Ver video de autocuidado</string>
    <string name="proyectosAlcaldia">Ver mas proyectos de la alcaldia de medellín</string>

</resources>